feat: agregar Validaciones basicas